jsoup changelog

Release 1.15.4 [PENDING]
  * Improvement: when pretty-printing, wrap text that follows a <br> tag.
    <https://github.com/jhy/jsoup/issues/1858>
    
  * Bugfix: URLs containing characters such as [ and ] were not escaped correctly, and would throw a
    MalformedURLException when fetched.
    <https://github.com/jhy/jsoup/issues/1873>

Release 1.15.3 [2022-Aug-24]
  * Security: fixed an issue where the jsoup cleaner may incorrectly sanitize crafted XSS attempts if
    SafeList.preserveRelativeLinks is enabled.
    <https://github.com/jhy/jsoup/security/advisories/GHSA-gp7f-rwcx-9369>

  * Improvement: the Cleaner will preserve the source position of cleaned elements, if source tracking is enabled in the
    original parse.

  * Improvement: the error messages output from Validate are more descriptive. Exceptions are now ValidationExceptions
    (extending IllegalArgumentException). Stack traces do not include the Validate class, to make it simpler to see
    where the exception originated. Common validation errors including malformed URLs and empty selector results have
    more explicit error messages.

  * Bugfix: the DataUtil would incorrectly read from InputStreams that emitted reads less than the requested size. This
    lead to incorrect results when parsing from chunked server responses, for e.g.
    <https://github.com/jhy/jsoup/issues/1807>

  * Build Improvement: added implementation version and related fields to the jar manifest.
    <https://github.com/jhy/jsoup/issues/1809>

*** Release 1.15.2 [2022-Jul-04]
  * Improvement: added the ability to track the position (line, column, index) in the original input source from where
    a given node was parsed. Accessible via Node.sourceRange() and Element.endSourceRange().
    <https://github.com/jhy/jsoup/pull/1790>

  * Improvement: added Element.firstElementChild(), Element.lastElementChild(), Node.firstChild(), Node.lastChild(),